platforms/vps-k8s/kustomize/base/apps/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synapse
        app.kubernetes.io/component: app
        ofc/network: frontend
        ofc/network-backend: "true"
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/homeserver.yaml
              subPath: homeserver.yaml
              readOnly: true
            - name: config
              mountPath: /data/log.config
              subPath: log.config
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse-data
        - name: config
          configMap:
            name: synapse-config
